# atg-research

./: .gitmodules  README.md
InteractRank/: README.md
InteractRank/interactrank/: requirements.txt  run.sh
InteractRank/interactrank/interactrank/: base_model.py  eval.py  feature_consts.py  label_extractor.py  model.py  train.py
docs/rl-diffusion/: index.html
joint-rl-diffusion/: README.md  ddim_with_prob.py  pipeline_with_prob.py  train.py
joint-rl-diffusion/ImageReward/: example.py  requirements.txt  setup.py  test.py
joint-rl-diffusion/ImageReward/ImageReward/: ImageReward.py  __init__.py  utils.py
joint-rl-diffusion/configs/: imagereward_train_configs.yaml
joint-rl-diffusion/docs/: index.html
omnisage/: README.md  model.py  requirements.txt  tasks.py  train.py
omnisearchsage/: README.md  pytest.ini  requirements.txt  run.sh
omnisearchsage/extension/: CMakeLists.txt  setup.py
omnisearchsage/extension/operators/: basic_tokenize.cpp  basic_tokenize.h  bert_tokenizer.cpp  bert_tokenizer.h  registry.cpp
omnisearchsage/extension/python/torchscript/: pinterest_ops.py
omnisearchsage/extension/tokenization/: ngram.cpp  ngram.h  text_normalizer.cpp  text_normalizer.h
omnisearchsage/extension/tokenization/bert_tokenizer/: basic_tokenizer.cpp  basic_tokenizer.h  bert_tokenizer.cpp  bert_tokenizer.h  tokenization_bert_utils.cpp  tokenization_bert_utils.h  wordpiece_tokenizer.cpp  wordpiece_tokenizer.h
omnisearchsage/omnisearchsage/: __init__.py  datasets.py  eval.py  feature_consts.py  features.py  model.py  trackers.py  train.py
omnisearchsage/omnisearchsage/common/: types.py
omnisearchsage/omnisearchsage/configs/: base_configs.py  configs.py
omnisearchsage/omnisearchsage/data/: sage_features.py
omnisearchsage/omnisearchsage/launcher/: launcher.py  local_elastic_agent.py
omnisearchsage/omnisearchsage/modules/: approx.py  metric_learning_softmax.py  negatives.py  sage_embedder.py  text_embedding.py  tokenization.py
omnisearchsage/tests/: test_model.py
omnisearchsage/tests/data/: test_sage_features.py
omnisearchsage/tests/modules/: test_approx.py  test_negatives.py  (+3 more)
rl-diffusion/: dummy.html  index.html
transformer_user_action/: README.md
transformer_user_action/transactv2_code/: skut.py  sparse_nn.py
(+56 files in other folders)
